--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
 			<artifactId>jquery</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.webjars</groupId>
+			<artifactId>bootstrap</artifactId>
+			<version>4.1.1</version>
+		</dependency>
 
 	</dependencies>
 	<build>
